[package]
name = "day01"
version = "0.1.0"
authors = ["meltinglava <roi1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_tool = { path = "../aoc_tool/" }

[dev-dependencies]
itertools = "0.9.0"
maplit = "1.0.2"
